# Music-Genre-Predictor

./: CMakeLists.txt  README.md
resources/: MARKDOWN.md  stopwords.txt
resources/images/: NOTES.md
src/: genrePredictor.cpp  genrePredictor.hpp  main.cpp  mapStructure.hpp  topTen.hpp  unorderedMapStructure.hpp  wordPerGenre.hpp
